--- a/JustJava/app/src/main/res/layout/activity_main.xml
+++ b/JustJava/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,22 @@
         android:textColor="#000000"
         android:textSize="16sp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/price"
+        android:textAllCaps="true"/>
+
+    <TextView
+        android:id="@+id/price_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="$0"
+        android:textColor="#000000"
+        android:textSize="16sp"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
