--- a/JustJava/app/src/main/res/layout/activity_main.xml
+++ b/JustJava/app/src/main/res/layout/activity_main.xml
@@ -18,30 +18,40 @@
         android:text="@string/quantity"
         android:textAllCaps="true"/>
 
-    <Button
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:text="@string/plus"
-        android:textAllCaps="true"
-        android:onClick="increment"
-        android:layout_marginBottom="16dp"/>
-
-    <TextView
-        android:id="@+id/quantity_text_view"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="0"
-        android:textColor="#000000"
-        android:textSize="16sp"/>
+        android:orientation="horizontal">
 
-    <Button
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:text="@string/minus"
-        android:textAllCaps="true"
-        android:onClick="decrement"
-        android:layout_marginBottom="16dp"/>
+        <Button
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:onClick="decrement"
+            android:text="@string/minus"
+            android:textAllCaps="true"/>
+
+        <TextView
+            android:id="@+id/quantity_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text="0"
+            android:textColor="#000000"
+            android:textSize="16sp"/>
+
+        <Button
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:onClick="increment"
+            android:text="@string/plus"
+            android:textAllCaps="true"/>
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -62,7 +72,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="submitOrder"
         android:text="@string/order"
-        android:textAllCaps="true"
-        android:onClick="submitOrder"/>
+        android:textAllCaps="true"/>
 </LinearLayout>
